--- a/day2/boxes.html
+++ b/day2/boxes.html
@@ -18,27 +18,67 @@
     <table>
         <tr>
             <td>
-                <div class="top_box"><br /><br /><br /></div>
+                <div class="top_box">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
             </td>
         </tr>
     </table>
     <table>
         <tr>
             <td>
-                <div class="left_box"><br /><br /><br /><br /><br /><br /><br /><br /><br /></div>
+                <div class="left_box">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
             </td>
             <td>
-                <div class="middle_box"><br /><br /><br /><br /><br /><br /><br /><br /><br /></div>
+                <div class="middle_box">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
             </td>
             <td>
-                <div class="right_box"><br /><br /><br /><br /><br /><br /><br /><br /><br /></div>
+                <div class="right_box">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
             </td>
         </tr>
     </table>
     <table>
         <tr>
             <td>
-                <div class="lower_box"><br /><br /><br /></div>
+                <div class="lower_box">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
             </td>
         </tr>
     </table>
